@startuml
class SceneResolver <<sealed>> {
    - _gameSceneBinders : GameSceneBinder[]
    - _cashedMap : Dictionary<GameScene, string>
}
class GameSceneBinder <<sealed>> {
    + scene : GameScene
    + originPath : string
}
ScriptableObject <|-- SceneResolver
IConfiguration <|-- SceneResolver
@enduml
